fixed styles so the title is not covered by box shadow

--- a/ui2022/src/app/pages/profile-page/components/profile-certificates/profile-certificates.component.scss
+++ b/ui2022/src/app/pages/profile-page/components/profile-certificates/profile-certificates.component.scss
@@ -3,7 +3,7 @@
 }
 
 .boxShadow {
-  box-shadow: 0 0 35px 25px var(--background);
+  box-shadow: 0 0 15px 15px var(--background);
   margin: 0 auto;
   background: var(--background);
 }
